<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_passwords"/>

            <TextView
                android:id="@+id/lblPwdNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/digit_one"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/skbPwdNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legnth_of_passwords"/>

            <TextView
                android:id="@+id/lblPwdLen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/digit_six"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/skbPwdLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="24"
            android:progress="6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/current_bits_allowance" />

            <TextView
                android:id="@+id/lblBitsAllowance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:textSize="12sp"
                android:text="@string/loading"
                android:textColor="@android:color/holo_green_dark"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:onClick="generate" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblInstuction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/click_to_copy_to_clipboard" />

    <ListView
        android:id="@+id/lstPwds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_passwords" />
</LinearLayout>